# COMPX593-Thesis

./: CMakeLists.txt  README.md
Script/: Fc_ELISA.ipynb  InfoInjector.py  MQAAR.py  compute_mean.py  merge_numpy.py  parse_stats.py  plot_signal.py  pod5Merger.py  sequence_injector.py  signal_merge.py
plot/: correlation.csv  data.csv  model.csv  test.csv
src/: Benchmarker.cpp  IdExtractor.cpp  LengthFilter.cpp  PrimerTrimmer.cpp  SingleUmiBenchmarker.cpp  SingleUmiOverlap.cpp  UmiExtractor.cpp  UmiFilter.cpp  UmiSpliter.cpp  variant_generator.cpp
src/bash/: BenchmarkModel.sh  CalcStats.sh  DMSPolishing.sh  GenerateCorrelationCsv.sh  GenerateDataCsv.sh  GenerateTestCsv.sh
src/c++/: Benchmarker.cpp  DualSiteDMSFilter.cpp  IdExtractor.cpp  MQAAR.cpp  ParseStats.cpp  PrimerTrimmer.cpp  SingleUmiBenchmarker.cpp  SingleUmiOverlap.cpp  UmiCloner.cpp  UmiExtractor.cpp  UmiFilter.cpp  UmiOverlap.cpp  UmiSpliter.cpp  VariantConcordance.cpp  VariantConcordanceCli.cpp  VariantGenerator.cpp  VariantKeyOverlap.cpp
src/c++/include/ont_tools/: Fastq.hpp  Sequence.hpp  Umi.hpp  VariantConcordance.hpp
src/python/: MergeNumpy.py  PlotSignal.py  Pod5InfoInjector.py  Pod5Merger.py  Pod5PrintLength.py  Pod5Splitter.py  PrintLength.py  ReadNumpy.py  pod5Spliter.py
