cmake_minimum_required(VERSION 4.0)
project(OntTools VERSION 1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(IdExtractor src/IdExtractor.cpp)
add_executable(VariantGenerator src/VariantGenerator.cpp)
add_executable(UmiFilter src/UmiFilter.cpp)
add_executable(LengthFilter src/LengthFilter.cpp)
add_executable(UmiExtractor src/UmiExtractor.cpp)
add_executable(UmiCloner src/UmiCloner.cpp)
add_executable(PrimerTrimmer src/PrimerTrimmer.cpp)
add_executable(Benchmarker src/Benchmarker.cpp)
add_executable(UmiOverlap src/UmiOverlap.cpp)
add_executable(UmiSpliter src/UmiSpliter.cpp)
add_executable(SingleUmiOverlap src/SingleUmiOverlap.cpp)
add_executable(SingleUmiBenchmarker src/SingleUmiBenchmarker.cpp)
