cmake_minimum_required(VERSION 4.0)
project(OntTools VERSION 1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(IdExtractor src/c++/IdExtractor.cpp)
add_executable(VariantGenerator src/c++/VariantGenerator.cpp)
add_executable(UmiFilter src/c++/UmiFilter.cpp)
add_executable(LengthFilter src/c++/LengthFilter.cpp)
add_executable(UmiExtractor src/c++/UmiExtractor.cpp)
add_executable(UmiCloner src/c++/UmiCloner.cpp)
add_executable(PrimerTrimmer src/c++/PrimerTrimmer.cpp)
add_executable(Benchmarker src/c++/Benchmarker.cpp)
add_executable(UmiOverlap src/c++/UmiOverlap.cpp)
add_executable(UmiSpliter src/c++/UmiSpliter.cpp)
add_executable(SingleUmiOverlap src/c++/SingleUmiOverlap.cpp)
add_executable(SingleUmiBenchmarker src/c++/SingleUmiBenchmarker.cpp)
