cmake_minimum_required(VERSION 3.20)
project(OntTools VERSION 1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

find_package(PkgConfig REQUIRED)
pkg_check_modules(HTS REQUIRED IMPORTED_TARGET htslib)

set(ONT_TOOLS_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/src/c++/include")

function(add_ont_tool target_name source_file)
    add_executable(${target_name} "${source_file}")
    target_include_directories(${target_name} PRIVATE "${ONT_TOOLS_INCLUDE_DIR}")
    target_compile_features(${target_name} PRIVATE cxx_std_17)

    if(MSVC)
        target_compile_options(${target_name} PRIVATE /W4 /permissive-)
    else()
        target_compile_options(${target_name} PRIVATE -Wall -Wextra -Wpedantic)
    endif()
endfunction()

add_library(ont_variant_concordance STATIC src/c++/VariantConcordance.cpp)
target_include_directories(ont_variant_concordance PUBLIC "${ONT_TOOLS_INCLUDE_DIR}")
target_compile_features(ont_variant_concordance PUBLIC cxx_std_17)

if(MSVC)
    target_compile_options(ont_variant_concordance PRIVATE /W4 /permissive-)
else()
    target_compile_options(ont_variant_concordance PRIVATE -Wall -Wextra -Wpedantic)
endif()

add_ont_tool(VariantGenerator src/c++/VariantGenerator.cpp)
add_ont_tool(UmiFilter src/c++/UmiFilter.cpp)
add_ont_tool(UmiExtractor src/c++/UmiExtractor.cpp)
add_ont_tool(UmiCloner src/c++/UmiCloner.cpp)
add_ont_tool(PrimerTrimmer src/c++/PrimerTrimmer.cpp)
add_ont_tool(Benchmarker src/c++/Benchmarker.cpp)
add_ont_tool(UmiOverlap src/c++/UmiOverlap.cpp)
add_ont_tool(UmiSpliter src/c++/UmiSpliter.cpp)
add_ont_tool(SingleUmiOverlap src/c++/SingleUmiOverlap.cpp)
add_ont_tool(SingleUmiBenchmarker src/c++/SingleUmiBenchmarker.cpp)
add_ont_tool(MQAAR src/c++/MQAAR.cpp)
add_ont_tool(ParseStats src/c++/ParseStats.cpp)
add_ont_tool(VariantKeyOverlap src/c++/VariantKeyOverlap.cpp)
add_ont_tool(VariantConcordance src/c++/VariantConcordanceCli.cpp)
target_link_libraries(VariantConcordance PRIVATE ont_variant_concordance)
add_ont_tool(DualSiteDMSFilter src/c++/DualSiteDMSFilter.cpp)
target_link_libraries(DualSiteDMSFilter PRIVATE PkgConfig::HTS)
